--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -228,10 +228,10 @@ crossorigin=""/>
           <span lang="en"><u>Example:</u> Ambergris is a dejecta secreted by the sperm whale, which is released into its habitat and then found on certain beaches. Its scent when drying is very sensual and particularly appreciated by perfumers to build the base notes of their perfumes. Today, this emblematic material is replaced by so-called "amber" molecules (<a class="interpop" href="../ingredients/Ambroxan®__Ambroxan®.html" target="_blank">Ambroxan®</a>, <a class="interpop" href="../ingredients/Iso_E_Super®__Iso_E_Super®.html" target="_blank">Iso E Super®</a>, <a class="interpop" href="../ingredients/Grisalva®__Grisalva®.html" target="_blank">Grisalva®</a>…). Similarly, <a class="interpop" href="../ingredients/Castoreum_Resinoid__Castoréum_Résinoïde.html" target="_blank">castoreum</a> is a balm secreted by the beaver (found in Canada or Siberia), in a pouch under its anus. The extraction of this pouch allows to obtain a very fragrant resin. Today, this raw material is replaced by bases that imitate its smell.</span>
         </p>
       </p>
-      <p>
+      <p class="ingredientnat">
         <span lang="fr">Les matières premières issues de végétaux se distinguent en plusieurs catégories :</span>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
-        <ul style="font-size: 0.8em;">
+        <ul>
           <li>
             <span class="catégories">Les huiles essentielles :</span>
             <ol>
