--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -231,7 +231,7 @@ crossorigin=""/>
       <p class="ingredientnat">
         <span lang="fr">Les matières premières issues de végétaux se distinguent en plusieurs catégories :</span>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
-        <ul>
+        <ul style="font-size: 0.8em;">
           <li>
             <span class="catégories">Les huiles essentielles :</span>
             <ol>
