--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -233,16 +233,26 @@ crossorigin=""/>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
         <ul style="font-size: 0.8em;">
           <li>
-            <span class="catégories">Les huiles essentielles :</span>
+            <span class="catégories" lang="fr">Les huiles essentielles :</span>
+            <span class="catégories" lang="en">Essential oils :</span>
             <ol>
-              <li><span class="catégories2">Les distillations :</span>
-                <br>Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.
+              <li>
+                <span class="catégories2" lang="fr">Les distillations :
+                <br>Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
+                <span class="catégories2" lang="en">Steam distillation :
+                <br>Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
               </li>
-              <li><span class="catégories2">Les distillations sèches : </span>
-                <br>Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.
+              <li>
+                <span class="catégories2" lang="fr">Les distillations sèches : 
+                <br>Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.</span>
+                <span class="catégories2" lang="en">Dry distillation :
+                <br>For cade (a conifer) and birch (a wood), the essential oil is obtained by dry distillation. This consists in a pyrogenation of the wood under a very high temperature (about 800°C) in an oven, followed by a distillation of the tar recovered, to obtain only the odorous compounds resulting from this process.</span>
               </li>
-              <li><span class="catégories2">Les expressions :</span>
-                <br>Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.
+              <li>
+                <span class="catégories2" lang="fr">Les expressions :
+                <br>Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.</span>
+                <span class="catégories2" lang="en">Cold pression :
+                <br>For citrus fruits, the essential oil is obtained by cold pression: the peel is expressed, then the oil is separated from the resulting water by centrifugation.</span>
               </li>
             </ol>
           </li>    
