--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -238,7 +238,7 @@ crossorigin=""/>
             <ol>
               <li>
                 <span class="catégories2" lang="fr">Les distillations :
-                <br>Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
+                <br class="sous_texte">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span class="catégories2" lang="en">Steam distillation :
                 <br>Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
               </li>
