--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -237,10 +237,11 @@ crossorigin=""/>
             <span class="catégories" lang="en">Essential oils :</span>
             <ol>
               <li>
-                <span class="catégories2" lang="fr">Les distillations :
-                <br class="sous_texte">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
-                <span class="catégories2" lang="en">Steam distillation :
-                <br>Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
+                <span class="catégories2" lang="fr">Les distillations :</span>
+                <span class="catégories2" lang="en">Steam distillation :</span>
+                <br>
+                <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
+                <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
               </li>
               <li>
                 <span class="catégories2" lang="fr">Les distillations sèches : 
