--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -244,25 +244,38 @@ crossorigin=""/>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
               </li>
               <li>
-                <span class="catégories2" lang="fr">Les distillations sèches : 
-                <br>Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.</span>
-                <span class="catégories2" lang="en">Dry distillation :
-                <br>For cade (a conifer) and birch (a wood), the essential oil is obtained by dry distillation. This consists in a pyrogenation of the wood under a very high temperature (about 800°C) in an oven, followed by a distillation of the tar recovered, to obtain only the odorous compounds resulting from this process.</span>
+                <span class="catégories2" lang="fr">Les distillations sèches : </span>
+                <span class="catégories2" lang="en">Dry distillation :</span>
+                <br>
+                <span lang="fr">Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.</span>
+                <span lang="en">For cade (a conifer) and birch (a wood), the essential oil is obtained by dry distillation. This consists in a pyrogenation of the wood under a very high temperature (about 800°C) in an oven, followed by a distillation of the tar recovered, to obtain only the odorous compounds resulting from this process.</span>
               </li>
               <li>
-                <span class="catégories2" lang="fr">Les expressions :
-                <br>Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.</span>
-                <span class="catégories2" lang="en">Cold pression :
-                <br>For citrus fruits, the essential oil is obtained by cold pression: the peel is expressed, then the oil is separated from the resulting water by centrifugation.</span>
+                <span class="catégories2" lang="fr">Les expressions :</span>
+                <span class="catégories2" lang="en">Cold pression :</span>
+                <br>
+                <span lang="fr">Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.</span>
+                <span lang="en">For citrus fruits, the essential oil is obtained by cold pression: the peel is expressed, then the oil is separated from the resulting water by centrifugation.</span>
               </li>
             </ol>
           </li>    
-          <li><span class="catégories">Les concrètes et absolues : </span>
+          <li>
+            <span class="catégories" lang="fr">Les concrètes et absolues : </span>
+            <span class="catégories" lang="en">Concretes, absolutes and resinoids :</span>
             <ol>
-              <li><span class="catégories2">Les concrêtes :</span>
-                  <br>Les <b>absolues</b> résultent de l’extraction d’une <b>plante fraiche</b>. Il peut s’agir d’une fleur (Rose de Mai Absolue), d’une fève (Fève Tonka Absolue), d’une graine (Fenugrec Absolue)… Cette extraction se déroule en plusieurs étapes. La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après extraction, retrait des plantes (on dit alors qu’elles sont « épuisées ») et évaporation du solvant, on obtient une <b>concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.
+              <li>
+                <span class="catégories2" lang="fr">Les concrêtes :</span>
+                <span class="catégories2" lang="en">Concretes :</span>
+                <br>
+                <span lang="fr">Les <b>absolues</b> résultent de l’extraction d’une <b>plante fraiche</b>. Il peut s’agir d’une fleur (Rose de Mai Absolue), d’une fève (Fève Tonka Absolue), d’une graine (Fenugrec Absolue)… Cette extraction se déroule en plusieurs étapes. La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après extraction, retrait des plantes (on dit alors qu’elles sont « épuisées ») et évaporation du solvant, on obtient une <b>concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.</span>
+                <span lang="en"><b>Concretes</b> are the result of the extraction of a <b>fresh plant</b>. It can be a flower (Rose de Mai Absolute), a bean (Tonka Bean Absolute), a seed (Fenugreek Absolute)... This extraction is carried out in several stages. The first consists in plunging the plant in an organic solvent such as hexane or petroleum ether. After extraction, removal of the plants and evaporation of the solvent, a concrete is obtained. It is a paste because it includes the waxes of the plant, which have also been extracted by the solvent used.</span>
               </li>
-              <li><span class="catégories2">Les absolues :</span> 
+              <li>
+                <span class="catégories2" lang="fr">Les absolues :</span>
+                <span class="catégories2" lang="fr">Absolutes :</span>
+                <br>
+                <span lang="fr">Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.</span>
+                <span lang="en">To make the concrete usable in perfumery, it must be diluted in alcohol, then cooled to precipitate the waxes, and filtered. After evaporation of the solvent, the product obtained is liquid, sometimes viscous, and limpid: it is the absolute.</span>  
               </li>
             </ol>     
           </li>
