--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -272,7 +272,7 @@ crossorigin=""/>
               </li>
               <li>
                 <span class="catégories2" lang="fr">Les absolues :</span>
-                <span class="catégories2" lang="fr">Absolutes :</span>
+                <span class="catégories2" lang="en">Absolutes :</span>
                 <br>
                 <span lang="fr">Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.</span>
                 <span lang="en">To make the concrete usable in perfumery, it must be diluted in alcohol, then cooled to precipitate the waxes, and filtered. After evaporation of the solvent, the product obtained is liquid, sometimes viscous, and limpid: it is the absolute.</span>  
