--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -260,7 +260,7 @@ crossorigin=""/>
             </ol>
           </li>    
           <li>
-            <span class="catégories" lang="fr">Les concrètes et absolues : </span>
+            <span class="catégories" lang="fr">Les concrètes, absolues et résinoïdes: </span>
             <span class="catégories" lang="en">Concretes, absolutes and resinoids :</span>
             <ol>
               <li>
@@ -277,19 +277,21 @@ crossorigin=""/>
                 <span lang="fr">Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.</span>
                 <span lang="en">To make the concrete usable in perfumery, it must be diluted in alcohol, then cooled to precipitate the waxes, and filtered. After evaporation of the solvent, the product obtained is liquid, sometimes viscous, and limpid: it is the absolute.</span>  
               </li>
-            </ol>     
-          </li>
-          <li><span class="catégories">Les baumes et les résinoïdes : </span>
-            <ol>
-              <li><span class="catégories2">Les résinoïdes :</span>
-                <br>Les résinoïdes résultent de l’extraction d’un produit sec. Il s’agit souvent de résines d’arbres (Benjoin Siam Résinoïde). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (Encens HE).
-              </li>
-              <li><span class="catégories2">Les baumes :</span>
+              <li>
+                <span class="catégories2" lang="fr">Les résinoïdes :</span>
+                <span class="catégories2" lang="en">Resinoids :</span>
+                <br>
+                <span lang="fr">Les résinoïdes résultent de l’extraction d’un produit sec. Il s’agit souvent de résines d’arbres (Benjoin Siam Résinoïde). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (Encens HE).</span>
+                <span lang="en">Resinoids result from the extraction of a dry product. They are often tree resins (Siam Benzoin Resinoid). Their extraction consists in solubilizing the resin's odorous compounds in alcohol, cooling the mixture to precipitate the waxes, then filtering and evaporating the solvent. The product obtained is liquid, sometimes highly viscous. These resins are often also extractable by steam distillation, to obtain an essential oil (Frankincense EO).</span>
               </li>
             </ol>  
           </li>
-          <li><span class="catégories">Les extraits CO<sub>2</sub> supercritique : </span>
-              <br>Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO2 sous cette forme est coûteux, mais ce type d’extraction fourni un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.        
+          <li>
+            <span class="catégories" lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
+            <span class="catégories" lang="en">Supercritical CO<sub>2</sub> extracts : </span>
+            <br>
+            <span lang="fr">Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO<sub>2</sub> sous cette forme est coûteux, mais ce type d’extraction fourni un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.</span>
+            <span lang="en">These ingredients result from the contact of any plant (it can even be some fruits, usually not extracted) with carbon dioxide at over 31°C and 74 bar of pressure. Putting CO<sub>2</sub> in this form is expensive, but this type of extraction provides an awesome olfactory result, and offers to the perfumer's palette high quality extracts</span>    
           </li>
         </ul>
       </p>
