--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -178,10 +178,7 @@ crossorigin=""/>
     <span lang="fr">Comment sont fabriqués les ingrédients qui composent nos parfums ? Du naturel au synthétique, découvrez comment sont faits vos parfums.</span>
     <span lang="en">How are perfume ingredients made ? From natural to synthetic ingredients, discover how perfumes are made.</span>
   </h2>
-  <h2 class="sous_titre mt-3">
-    <span lang="fr">Introduction – Ces ingrédients qui font la composition de nos parfums.</span>
-    <span lang="en">Introduction – Ingredients constituting our perfumes.</span>
-  </h2>
+
 
 <p>
   <span lang="fr">Dans la composition d’un parfum, il est possible d’utiliser environ <b class="bplus">3000 ingrédients différents</b>. La connaissance scientifique autour des essences et des molécules odorantes en recense cependant bien plus. Toutes constituent la <u>palette du parfumeur</u> : cet alphabet qu’il utilise pour raconter des histoires à travers ses parfums.
@@ -218,7 +215,7 @@ crossorigin=""/>
         <span lang="fr">LES INGREDIENTS NATURELS:</span>
         <span lang="en">NATURAL INGREDIENTS:</span>
       </b></u> 
-      <p>
+      <p class="mb-0">
         <span lang="fr">Ce types d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
 
         <span lang="en">This type of ingredient has always been popular in perfumes. Nevertheless, although they are cherished by perfumers and consumers, they have several disadvantages.The vast majority of natural raw materials are derived from <b>plants</b>. It was once possible to use <b>animal</b>-sourced raw materials, but they have <u>now disappeared for ethical and regulatory reasons.</u></span>
