--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -227,7 +227,7 @@ crossorigin=""/>
       <p>
         <span lang="fr">Les matières premières issues de végétaux se distinguent en plusieurs catégories :</span>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
-        <ul class="ingredientnat">
+        <ul class="ingredientnat" type="A">
           <li>
             <span class="catégories" lang="fr">Les huiles essentielles :</span>
             <span class="catégories" lang="en">Essential oils :</span>
