--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -305,8 +305,8 @@ crossorigin=""/>
     <p>
       <li>
         <u><b>
-          <span lang="fr">LES INGREDIENTS SYNTHETIQUES:</span>
-          <span lang="en">SYNTHETIC INGREDIENTS:</span>
+          <span class="titreMP" lang="fr">LES INGREDIENTS SYNTHETIQUES:</span>
+          <span class="titreMP" lang="en">SYNTHETIC INGREDIENTS:</span>
         </b></u>
         <p>
           <span lang="fr">Ces ingrédients sont issus de procédés de synthèse, c’est-à-dire de <b>réactions successives entre plusieurs molécules</b>. Souvent, de petites molécules sont utilisées comme point de départ, pour en fabriquer de plus grandes, en les assemblant. De grandes molécules bon marché peuvent aussi être utilisées pour en modifier la structure, et les propriétés olfactives. Il existe une infinité de réactions possibles, pour une infinité de molécules. Or, seules quelques-unes d’entre elles forment <b>les deux tiers de la palette du parfumeur</b>.
@@ -319,8 +319,8 @@ crossorigin=""/>
     <p>
       <li>
         <u><b>
-          <span lang="fr">LES BASES:</span>
-          <span lang="en">BASES:</span>
+          <span class="titreMP" lang="fr">LES BASES:</span>
+          <span class="titreMP" lang="en">BASES:</span>
         </b></u>
         <p>
           <span lang="fr">Les bases sont des compositions parfumantes, reproduisant une odeur connue, mais souvent non extractible. Elles servent à diversifier la palette du parfumeur, en proposant un plus large choix de matières premières, et en imitant l’odeur d’ingrédients existant ou non, à moindre coût.</span>
