--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -189,6 +189,36 @@ crossorigin=""/>
   <br>What are these raw materials? How are they obtained? What are their particularities and how does that influence their use? Enter the exciting world of scents !
   <br class="mt-2">First, their are <b class="bplus">three types of raw materials</b> used in perfumes</span>
 
+<div class="row card-deck text-center mb-5">
+    <div class="card">
+      <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
+      <div class="card-body" >
+        <p class="card-text">
+          <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour de la plateforme</span>
+          <span lang="en">I receive, twice a month, the ScenTree updates</span>
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="../img/sponsor.jpg" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
+      <div class="card-body">
+        <p class="card-text ">
+          <span lang="fr">Je suis informé des arrivées, des nouveautés et des actualités de nos sponsors</span>
+          <span lang="en">I am informed of the arrivals and news of our sponsors.</span>
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="../img/MP.jpg" title="Les ingrédients parfums" alt="Les ingrédients parfums">
+      <div class="card-body">
+        <p class="card-text">
+          <span lang="fr">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</span>
+          <span lang="en">Receive details about new ingredients added on ScenTree each week</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  
   <ul style="font-size: 0.8em;">
     <li>
       <span lang="fr"><b class="bplus">Les ingrédients naturels</b>: Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
@@ -216,7 +246,7 @@ crossorigin=""/>
 
       <p class="mt-2 mb-2">
         <img class="imgMP1" src="../img/ingredientsnaturels.PNG" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde">
-        <span lang="fr">Ce types d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
+        <span lang="fr">Ce type d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
         <span lang="en">This type of ingredient has always been popular in perfumes. Nevertheless, although they are cherished by perfumers and consumers, they have several disadvantages.The vast majority of natural raw materials are derived from <b>plants</b>. It was once possible to use <b>animal</b>-sourced raw materials, but they have <u>now disappeared for ethical and regulatory reasons.</u></span>
 
         <p class="exemple">
