--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -189,13 +189,14 @@ crossorigin=""/>
   <br>What are these raw materials? How are they obtained? What are their particularities and how does that influence their use? Enter the exciting world of scents !
   <br class="mt-2">First, their are <b class="bplus">three types of raw materials</b> used in perfumes</span>
 
-<div class="row card-deck text-center mb-5">
+<div class="row card-deck text-center mb-1">
     <div class="card">
-      <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
+      <img class="card-img-top" src="../img/ingredientsnaturels.PNG" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde">
       <div class="card-body" >
+        <p class="card-title"><span lang="fr"><b class="bplus">Les ingrédients naturels</b></span><span lang="en"><b class="bplus">Natural ingredients:</b></span>
         <p class="card-text">
-          <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour de la plateforme</span>
-          <span lang="en">I receive, twice a month, the ScenTree updates</span>
+          <span lang="fr">Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
+          <span lang="en">They result from the extraction of a plant or, formerly, an animal material.</span>
         </p>
       </div>
     </div>
@@ -218,7 +219,7 @@ crossorigin=""/>
       </div>
     </div>
   </div>
-  
+
   <ul style="font-size: 0.8em;">
     <li>
       <span lang="fr"><b class="bplus">Les ingrédients naturels</b>: Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
