--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -193,47 +193,43 @@ crossorigin=""/>
     <div class="card">
       <img class="card-img-top" src="../img/ingredientsnaturels.PNG" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde">
       <div class="card-body" >
-        <p class="card-title"><span lang="fr"><b class="bplus">Les ingrédients naturels</b></span><span lang="en"><b class="bplus">Natural ingredients:</b></span>
+        <p class="card-title">
+          <span lang="fr"><b class="bplus">LES INGREDIENTS NATURELS</b></span>
+          <span lang="en"><b class="bplus">NATURAL INGREDIENTS</b></span>
+        </p>
         <p class="card-text">
-          <span lang="fr">Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
+          <span lang="fr">Résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
           <span lang="en">They result from the extraction of a plant or, formerly, an animal material.</span>
         </p>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/sponsor.jpg" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
+      <img class="card-img-top" src="../img/base.png" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
       <div class="card-body">
+        <p class="card-title">
+          <span lang="fr"><b class="bplus">LES INGREDIENTS SYNTHETIQUES</b></span>
+          <span lang="en"><b class="bplus">SYNTHETICS INGREDIENTS</b></span>
+        </p>
         <p class="card-text ">
-          <span lang="fr">Je suis informé des arrivées, des nouveautés et des actualités de nos sponsors</span>
-          <span lang="en">I am informed of the arrivals and news of our sponsors.</span>
+          <span lang="fr">Obtenus grâce à la (bio)chimie organique.</span>
+          <span lang="en">Obtained through organic (bio)chemistry</span>
         </p>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/MP.jpg" title="Les ingrédients parfums" alt="Les ingrédients parfums">
+      <img class="card-img-top" src="../img/synthétiques1.png" title="Les ingrédients parfums" alt="Les ingrédients parfums">
       <div class="card-body">
+        <p class="card-title">
+          <span lang="fr"><b class="bplus">LES BASES</b></span>
+          <span lang="en"><b class="bplus">BASES</b></span>
+        </p>
         <p class="card-text">
-          <span lang="fr">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</span>
-          <span lang="en">Receive details about new ingredients added on ScenTree each week</span>
+          <span lang="fr">Compositions parfumées, ingrédient crée préalablement par un parfumeur et qui contient, lui même, plusieurs ingrédients.</span>
+          <span lang="en">Perfumed compositions, an ingredient created by a perfumer and which also contains several ingredients.</span>
         </p>
       </div>
     </div>
   </div>
-
-  <ul style="font-size: 0.8em;">
-    <li>
-      <span lang="fr"><b class="bplus">Les ingrédients naturels</b>: Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
-      <span lang="en"><b class="bplus">Natural ingredients:</b> They result from the extraction of a plant or, formerly, an animal material.</span>
-    </li>
-    <li>
-      <span lang="fr"><b class="bplus">Les ingrédients synthétiques</b>: Elles sont obtenues grâce à la (bio)chimie organique.</span>
-      <span lang="en"><b class="bplus">Synthetic ingredients</b>: They are obtained through organic (bio)chemistry.</span>
-    </li>
-    <li>
-      <span lang="fr"><b class="bplus">Les bases</b>: Ce sont des compositions parfumées, un ingrédient crée préalablement par un parfumeur et qui contient, lui aussi, plusieurs ingrédients.</span>
-      <span lang="en"><b class="bplus">Bases</b>: They are perfumed compositions, an ingredient created by a perfumer and which also contains several ingredients.</span>
-    </li>
-  </ul>
 </p>
 
 <p>
