--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -204,7 +204,7 @@ crossorigin=""/>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/base.png" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
+      <img class="card-img-top" src="../img/synth.png" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
       <div class="card-body">
         <p class="card-title">
           <span lang="fr"><b class="bplus">LES INGREDIENTS SYNTHETIQUES</b></span>
