--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -254,10 +254,11 @@ crossorigin=""/>
       <p>
         <span lang="fr">Les matières premières issues de végétaux se distinguent en plusieurs catégories :</span>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
+
         <ul class="ingredientnat" type="A">
-          <li>
-            <span class="catégories" lang="fr">Les huiles essentielles :</span>
-            <span class="catégories" lang="en">Essential oils :</span>
+          <li class="catégories"></li>
+            <span lang="fr">Les huiles essentielles :</span>
+            <span lang="en">Essential oils :</span>
             <ol>
               <li>
                 <span class="catégories2" lang="fr">Les distillations :</span>
