--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -256,7 +256,7 @@ crossorigin=""/>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
 
         <ul class="ingredientnat" type="A">
-          <li class="catégories"></li>
+          <li class="catégories">
             <span lang="fr">Les huiles essentielles :</span>
             <span lang="en">Essential oils :</span>
             <ol>
