--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -261,10 +261,10 @@ crossorigin=""/>
             <span lang="en">Essential oils :</span>
           </li>
             <ol>
-              <li>
-                <span class="catégories2" lang="fr">Les distillations :</span>
-                <span class="catégories2" lang="en">Steam distillation :</span>
-                <br>
+              <li class="catégories2">
+                <span lang="fr">Les distillations :</span>
+                <span lang="en">Steam distillation :</span>
+              </li>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
               </li>
