--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -267,50 +267,43 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
+              <li class="catégories2">
+                <span lang="fr">Les distillations sèches : </span>
+                <span lang="en">Dry distillation :</span>
               </li>
-              <li>
-                <span class="catégories2" lang="fr">Les distillations sèches : </span>
-                <span class="catégories2" lang="en">Dry distillation :</span>
-                <br>
                 <span lang="fr">Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.</span>
                 <span lang="en">For cade (a conifer) and birch (a wood), the essential oil is obtained by dry distillation. This consists in a pyrogenation of the wood under a very high temperature (about 800°C) in an oven, followed by a distillation of the tar recovered, to obtain only the odorous compounds resulting from this process.</span>
+              <li class="catégories2">
+                <span lang="fr">Les expressions :</span>
+                <span lang="en">Cold pression :</span>
               </li>
-              <li>
-                <span class="catégories2" lang="fr">Les expressions :</span>
-                <span class="catégories2" lang="en">Cold pression :</span>
-                <br>
                 <span lang="fr">Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.</span>
                 <span lang="en">For citrus fruits, the essential oil is obtained by cold pression: the peel is expressed, then the oil is separated from the resulting water by centrifugation.</span>
-              </li>
             </ol>
-          </li>    
-          <li>
-            <span class="catégories" lang="fr">Les concrètes, absolues et résinoïdes: </span>
-            <span class="catégories" lang="en">Concretes, absolutes and resinoids :</span>
+          <li class="catégories">
+            <span lang="fr">Les concrètes, absolues et résinoïdes: </span>
+            <span lang="en">Concretes, absolutes and resinoids :</span>
+          </li>
             <ol>
-              <li>
-                <span class="catégories2" lang="fr">Les concrêtes :</span>
-                <span class="catégories2" lang="en">Concretes :</span>
-                <br>
+              <li class="catégories2">
+                <span lang="fr">Les concrêtes :</span>
+                <span lang="en">Concretes :</span>
+              </li>
                 <span lang="fr">Les <b>absolues</b> résultent de l’extraction d’une <b>plante fraiche</b>. Il peut s’agir d’une fleur (Rose de Mai Absolue), d’une fève (Fève Tonka Absolue), d’une graine (Fenugrec Absolue)… Cette extraction se déroule en plusieurs étapes. La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après extraction, retrait des plantes (on dit alors qu’elles sont « épuisées ») et évaporation du solvant, on obtient une <b>concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.</span>
                 <span lang="en"><b>Concretes</b> are the result of the extraction of a <b>fresh plant</b>. It can be a flower (Rose de Mai Absolute), a bean (Tonka Bean Absolute), a seed (Fenugreek Absolute)... This extraction is carried out in several stages. The first consists in plunging the plant in an organic solvent such as hexane or petroleum ether. After extraction, removal of the plants and evaporation of the solvent, a concrete is obtained. It is a paste because it includes the waxes of the plant, which have also been extracted by the solvent used.</span>
+              <li class="catégories2" >
+                <span lang="fr">Les absolues :</span>
+                <span lang="en">Absolutes :</span>
               </li>
-              <li>
-                <span class="catégories2" lang="fr">Les absolues :</span>
-                <span class="catégories2" lang="en">Absolutes :</span>
-                <br>
                 <span lang="fr">Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.</span>
                 <span lang="en">To make the concrete usable in perfumery, it must be diluted in alcohol, then cooled to precipitate the waxes, and filtered. After evaporation of the solvent, the product obtained is liquid, sometimes viscous, and limpid: it is the absolute.</span>  
+              <li class="catégories2" >
+                <span lang="fr">Les résinoïdes :</span>
+                <span lang="en">Resinoids :</span>
               </li>
-              <li>
-                <span class="catégories2" lang="fr">Les résinoïdes :</span>
-                <span class="catégories2" lang="en">Resinoids :</span>
-                <br>
                 <span lang="fr">Les résinoïdes résultent de l’extraction d’un produit sec. Il s’agit souvent de résines d’arbres (Benjoin Siam Résinoïde). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (Encens HE).</span>
                 <span lang="en">Resinoids result from the extraction of a dry product. They are often tree resins (Siam Benzoin Resinoid). Their extraction consists in solubilizing the resin's odorous compounds in alcohol, cooling the mixture to precipitate the waxes, then filtering and evaporating the solvent. The product obtained is liquid, sometimes highly viscous. These resins are often also extractable by steam distillation, to obtain an essential oil (Frankincense EO).</span>
-              </li>
             </ol>  
-          </li>
           <li>
             <span class="catégories" lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
             <span class="catégories" lang="en">Supercritical CO<sub>2</sub> extracts : </span>
