--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -255,7 +255,7 @@ crossorigin=""/>
         <span lang="fr">Les matières premières issues de végétaux se distinguent en plusieurs catégories :</span>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
 
-        <ul class="ingredientnat" type="A">
+        <ol class="ingredientnat" type="A">
           <li class="catégories">
             <span lang="fr">Les huiles essentielles :</span>
             <span lang="en">Essential oils :</span>
@@ -304,14 +304,13 @@ crossorigin=""/>
                 <span lang="fr">Les résinoïdes résultent de l’extraction d’un produit sec. Il s’agit souvent de résines d’arbres (Benjoin Siam Résinoïde). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (Encens HE).</span>
                 <span lang="en">Resinoids result from the extraction of a dry product. They are often tree resins (Siam Benzoin Resinoid). Their extraction consists in solubilizing the resin's odorous compounds in alcohol, cooling the mixture to precipitate the waxes, then filtering and evaporating the solvent. The product obtained is liquid, sometimes highly viscous. These resins are often also extractable by steam distillation, to obtain an essential oil (Frankincense EO).</span>
             </ol>  
-          <li>
-            <span class="catégories" lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
-            <span class="catégories" lang="en">Supercritical CO<sub>2</sub> extracts : </span>
-            <br>
+          <li class="catégories">
+            <span lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
+            <span lang="en">Supercritical CO<sub>2</sub> extracts : </span>
+          </li>
             <span lang="fr">Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO<sub>2</sub> sous cette forme est coûteux, mais ce type d’extraction fourni un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.</span>
             <span lang="en">These ingredients result from the contact of any plant (it can even be some fruits, usually not extracted) with carbon dioxide at over 31°C and 74 bar of pressure. Putting CO<sub>2</sub> in this form is expensive, but this type of extraction provides an awesome olfactory result, and offers to the perfumer's palette high quality extracts</span>    
-          </li>
-        </ul>
+        </ol>
       </p>
       <p>
         <span lang="fr">Il existe beaucoup d’autres méthodes d’extraction aboutissant sur d'autres catégories d'ingrédients, que nous ne détaillerons pas ici car leur présence n'est pas très courante (hydrolats, exhudats, teintures, infusions, terpene-less, pommades et autres produits issues de distillations moléculaires ou encore les produits modifiés chimiquement après extraction.).</span>
