--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -346,22 +346,21 @@ crossorigin=""/>
           <span lang="fr">On distingue les bases imitatrices et les bases créatives :</span>
           <span lang="en">Imitative and creative bases can be distinguished :</span>
 
-          <ul style="font-size: 0.8em;">
-            <li>
-              <span class="catégories" lang="fr">Les bases imitatrices : </span>
-              <span class="catégories" lang="en">Imitative bases : </span>
-              <br>
+          <ol style="font-size: 0.8em;" type="A">
+            <li class="catégories">
+              <span lang="fr">Les bases imitatrices : </span>
+              <span lang="en">Imitative bases : </span>
+            </li>
               <span lang="fr">Ces bases reproduisent l’odeur d’un extrait naturel, à un coût moindre, et avec une originalité olfactive. Bien souvent, il s’agit de bases internes aux sociétés de création, classées confidentielles. Elles sont créées par les parfumeurs, en utilisant des ingrédients naturels comme synthétiques. Elles sont créées comme des parfums.</span>
               <span lang="en">These bases reproduce the smell of a natural extract, at a lower cost, and with an olfactory originality. Very often, they are internal bases, exclusively used by some creative companies, and thus classified as confidential. They are created by perfumers, using both natural and synthetic ingredients. They are created like perfumes.</span>
+
+            <li class="catégories">
+              <span lang="fr">Les bases créatives : </span>
+              <span lang="en">Creatives bases : </span>
             </li>
-            <li>
-              <span class="catégories" lang="fr">Les bases créatives : </span>
-              <span class="catégories" lang="en">Creatives bases : </span>
-              <br>
               <span lang="fr">Ce sont celles qui innovent. Elles ont pour objectif de représenter un thème olfactif ou l’odeur d’un produit de consommation, non extractible. La base Chocovan®, la Cassis Base 345 F® ou encore le Nectarol® ont cette visée.</span>
               <span lang="en">These are the ones which innovate. They aim to represent an olfactory theme, or the smell of a consumer product, not extractable. Chocovan®, Cassis Base 345 F® or Nectarol® have this aim.</span>
-            </li>
-          </ul>
+          </ol>
         </p>  
       </li>
     </p>
@@ -371,49 +370,45 @@ crossorigin=""/>
 <p>
   <span lang="fr">Chaque matière première peut faire partie de la palette du parfumeur, constituée généralement de 200 à 1500 matières premières. Le créateur connait toutes les matières premières de sa palette, et sait les utiliser à bon escient. Leur utilisation est en effet régulée par plusieurs paramètres : </span>
   <span lang="en">Each raw material can be part of the perfumer's palette, generally containing 200 to 1500 raw materials. The perfumer knows all its raw materials, and knows how to use them properly. Their use is in fact regulated by several parameters:</span>
-  <ul style="font-size: 0.8em;">
-      <li>
-        <span class="catégories" lang="fr">La réglementation : </span>
-        <span class="catégories" lang="en">Regulation : </span>
+  <ol style="font-size: 0.8em;" type="A">
+      <li class="catégories">
+        <span lang="fr">La réglementation : </span>
+        <span lang="en">Regulation : </span>
         <ol>
-          <li>
-            <span class="catégories2">IFRA : </span>
-            <br>
+          <li class="catégories2">
+            <span>IFRA : </span>
+          </li>
             <span lang="fr">L’IFRA est l’association agissant notamment pour la réglementation des matières premières présentant un danger, possède une grande influence sur la restriction de l’utilisation de certains ingrédients.</span>
             <span lang="en">The IFRA is the association acting in particular for the regulation of hazardous raw materials. It has a great influence on the restriction of use of certain ingredients. Its goal is to guide raw materials usage, after safety and toxicology studies. Thus, a formula that complies with IFRA standards is known as safe to use.</span>
+          <li class="catégories2">
+            <span lang="fr">Les allergènes : </span> 
+            <span lang="en">Allergens : </span>  
           </li>
-          <li>
-            <span class="catégories2" lang="fr">Les allergènes : </span> 
-            <span class="catégories2" lang="en">Allergens : </span>  
-            <br>
             <span lang="fr">L’Union Européenne compte 26 molécules et extraits allergènes. Leur utilisation ne doit pas dépasser 100 ppm (0,01%) dans un produit fini rincé, et 10 ppm (0,001%) dans un produit fini non-rincé. Dans le cas d’une surutilisation, le nom de ces ingrédients doit figurer sur l’étiquette du produit concerné. Néanmoins, très peu de consommateurs sont allergiques aux produits parfumés. Pour en savoir plus, rendez-vous sur notre <a href="../allergenes.html" target="_BLANK">article sur le sujet</a>.</span>
             <span lang="en">There are 26 allergenic molecules and extracts in the European Union. Their use must not exceed 100 ppm (0.01%) in rinsed products and 10 ppm (0.001%) in non-rinsed products. In the case of overuse, the name of these ingredients must appear on the label of the concerned product. Nevertheless, very few consumers are allergic to perfumed products. Read more in our <a href="../allergenes.html" target="_BLANK"> article about this topic</a>.</span>
-          </li>
         </ol>
-      </li>  
-      <li>
-        <span class="catégories" lang="fr">La stabilité : </span>
-        <span class="catégories" lang="en">Stability : </span> 
-        <br>
+      </li>   
+      <li class="catégories">
+        <span lang="fr">La stabilité : </span>
+        <span lang="en">Stability : </span> 
+      </li>
         <span lang="fr">Les matières premières naturelles sont souvent instables, et certaines molécules sont parfois très réactives.</span>
         <span lang="en">Natural raw materials are often unstable, and some molecules are sometimes very reactive.</span>
+      <li  class="catégories">
+        <span lang="fr">Le coût : </span>
+        <span lang="en">Cost : </span>
       </li>
-      <li>
-        <span class="catégories" lang="fr">Le coût : </span>
-        <span class="catégories" lang="en">Cost : </span>
-        <br>
         <span lang="fr">Certains ingrédients sont difficiles à obtenir, car leur préparation peut être longue, demander une main d’œuvre, des molécules ou des procédés coûteux, ne permettre de les obtenir qu’avec un faible rendement…</span>
         <span lang="en">Some ingredients are difficult to obtain because their preparation can be time-consuming, require labour, expensive molecules or processes, or can only be obtained with a low yield...</span>
+      <li class="catégories">
+        <span lang="fr">Les demandes et contraintes clients : </span>
+        <span lang="en">Client’s demand and constraint : </span>
       </li>
-      <li>
-        <span class="catégories" lang="fr">Les demandes et contraintes clients : </span>
-        <span class="catégories" lang="en">Client’s demand and constraint : </span>
-        <br>
         <span lang="fr">Certaines demandes de création peuvent imposer par exemple de formuler exclusivement avec des matières premières naturelles, sans allergène, à bas coût de production, avec une certaine ténacité du parfum, avec certaines matières premières définies…</span>
         <span lang="en">Some creation requests may require, for example, to formulate exclusively with natural raw materials, without allergens, with low production costs, with a certain tenacity of the perfume, with certain defined raw materials...</span>
-      </li>
-  </ul>
+  </ol>
 </p>
+
 <p>
   <span lang="fr">L’art de créer un parfum réside dans la faculté de son créateur à respecter les différents enjeux qui lui sont imposés, tout en racontant l’histoire qu’il souhaite transmettre à travers les odeurs.</span>
   <span lang="en">The art of creating a perfume lies in the ability of its creator to respect the different challenges imposed, while telling the story he/she wishes to convey through scents.</span>
